--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,9 @@ box-shadow: 0px 6px 21px 3px rgba(0,0,0,0.48);
     background-color: lightgray;
 }
 #tileblock > div {
+    -webkit-box-shadow: 0px 2px 11px -1px rgba(0,0,0,0.68);
+    -moz-box-shadow: 0px 2px 11px -1px rgba(0,0,0,0.68);
+    box-shadow: 0px 2px 11px -1px rgba(0,0,0,0.68);
     background: white;
     margin: 10px;
     padding: 10px;
