--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@
 			    display:list-item;
 			    position: relative;
 			}
-p+img:hover, #tileblock > div:hover{
+p+img:hover, #tileblock > div:hover .button:hover{
    -webkit-box-shadow: 0px 6px 21px 3px rgba(0,0,0,0.48);
 -moz-box-shadow: 0px 6px 21px 3px rgba(0,0,0,0.48);
 box-shadow: 0px 6px 21px 3px rgba(0,0,0,0.48);
@@ -106,7 +106,7 @@ box-shadow: 0px 6px 21px 3px rgba(0,0,0,0.48);
 #tileblock{
     background-color: lightgray;
 }
-#tileblock > div {
+#tileblock > div ,.button{
     -webkit-box-shadow: 0px 2px 11px -1px rgba(0,0,0,0.68);
     -moz-box-shadow: 0px 2px 11px -1px rgba(0,0,0,0.68);
     box-shadow: 0px 2px 11px -1px rgba(0,0,0,0.68);
@@ -116,3 +116,21 @@ box-shadow: 0px 6px 21px 3px rgba(0,0,0,0.48);
     display: inline-block;
     width: 28%;
 }
+.button { 
+    margin: 0 auto;
+    border-top: 1px solid white;
+    border-radius: 10px;
+    border-bottom: 5px solid black;
+    width: 40px;
+    height:40px;
+    display:block;
+background: radial-gradient(ellipse at center, rgba(204,0,0,1) 0%,rgba(204,0,0,1) 100%);}
+
+.button:hover {
+    display:block;
+background: radial-gradient(ellipse at center, rgba(255,102,0,1) 0%,rgba(199,34,0,1) 100%);}
+.button:active {
+    border-bottom: 0;
+    border-top: 5px solid black;
+background: radial-gradient(ellipse at center, rgba(204,0,0,1) 0%,rgba(204,0,0,1) 100%);
+box-shadow: inset 0px 6px 21px 3px rgba(0,0,0,0.48);}
