--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@
             text-align: center;
             padding: 10px;
         }
+	#logo {
+		position: relative;
+		left: 30px;
+		top: 30px;
+	}
         h3+ul {
             list-style: none;
         }
