--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,17 @@
             text-align: center;
             padding: 10px;
         }
-	#logo {
+	#logo, #logo2 {
 		position: relative;
-		left: 30px;
-		top: 30px;
+
 		width: 200px;
 	}
+#logo {
+		left: 30px;
+		top: 30px;}
+#logo2 {
+		right: 30px;
+		top: 30px;}
         h3+ul {
             list-style: none;
         }
