--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,12 @@
             font-size: 20px;
         }
         #main{
+		margin-top: 60px;
             margin: 0 auto;
             background-color: white;
         }
 nav {
+	width: 100%;
 position:fixed;
 top:0px;
             margin-top: 0px;
