--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,10 @@
             font-size: 20px;
         }
         #main{
-		margin-top: 60px;
-            margin: 0 auto;
+                margin-top: 60px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;
             background-color: white;
         }
 nav {
