--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,9 @@ top:0px;
 		position: fixed;
 		
 	}
-#logo { top: 5px;
+#logo { top: 9px;
 		right: 150px;
-	height: 40px;
+	width: 200px;
 		}
 #logo2 {	top: 0px;
 		right: 0px;
