--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ top:0px;
 		}
 #logo2 {	top: 0px;
 		right: 0px;
-	height: 60px;
+	width: 102.8px;
 		}
         h3+ul {
             list-style: none;
