--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
     margin-left: auto;
             background-color: white;
         }
+header {
+margin-top: 80px;}
 nav {
 	width: 100%;
 position:fixed;
